[package]
name = "rust-ted"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10"
tokio = { version = "1.0", features = ["macros","rt-multi-thread"] }
dotenv = { version = "0.15.0", optional = true }

[features]
default=['dotenv']
dev=['dotenv']
prod=[]